According to the HTTP spec, use URI instead of URL to parse referer header
Fixes #5339